--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>
+            src/main/kotlin
+        </sourceDirectory>
+        <testSourceDirectory>
+            src/test/kotlin
+        </testSourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
