--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.spbstu</groupId>
+    <groupId>org.jetbrains.research</groupId>
     <artifactId>kfirst-runner</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-vorpal-research-kotlin-maven</id>
+            <name>vorpal-research-kotlin-maven</name>
+            <url>
+                https://api.bintray.com/maven/vorpal-research/kotlin-maven/${project.artifactId}/;publish=1
+            </url>
+        </repository>
+    </distributionManagement>
 
     <repositories>
         <repository>
