--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jetbrains.research</groupId>
     <artifactId>kfirst-runner</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
 
     <distributionManagement>
         <repository>
@@ -20,9 +20,9 @@
 
     <repositories>
         <repository>
-            <id>jitpack.io</id>
-            <name>jitpack</name>
-            <url>https://jitpack.io</url>
+            <id>bintray-vorpal-research-kotlin-maven</id>
+            <name>vorpal-research-kotlin-maven</name>
+            <url>http://dl.bintray.com/vorpal-research/kotlin-maven</url>
         </repository>
         <repository>
             <id>bintray-xenomachina-maven</id>
@@ -39,7 +39,7 @@
             UTF-8
         </project.reporting.outputEncoding>
 
-        <kotlin.version>1.1.3-2</kotlin.version>
+        <kotlin.version>1.1.4</kotlin.version>
         <junit.jupiter.version>5.0.0-RC2</junit.jupiter.version>
         <junit.vintage.version>4.12.0-RC2</junit.vintage.version>
         <junit.platform.version>1.0.0-RC2</junit.platform.version>
@@ -136,9 +136,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.belyaev-mikhail</groupId>
+            <groupId>ru.spbstu</groupId>
             <artifactId>kcheck</artifactId>
-            <version>master-SNAPSHOT</version>
+            <version>0.0.0.2</version>
         </dependency>
 
     </dependencies>
@@ -195,7 +195,9 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ru.spbstu.runner.MainKt</mainClass>
+                            <mainClass>
+                                org.jetbrains.research.runner.MainKt
+                            </mainClass>
                         </manifest>
                     </archive>
                 </configuration>
