--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
             UTF-8
         </project.reporting.outputEncoding>
 
-        <kotlin.version>1.2.51</kotlin.version>
+        <kotlin.version>1.2.60</kotlin.version>
         <junit.jupiter.version>5.0.0-RC2</junit.jupiter.version>
         <junit.vintage.version>4.12.0-RC2</junit.vintage.version>
         <junit.platform.version>1.0.0-RC2</junit.platform.version>
@@ -48,6 +48,7 @@
         <logback.version>1.0.13</logback.version>
         <jackson.version>2.9.0</jackson.version>
         <google.api.version>1.22.0</google.api.version>
+        <kcheck.version>0.0.0.2</kcheck.version>
     </properties>
 
     <dependencies>
@@ -138,7 +139,7 @@
         <dependency>
             <groupId>ru.spbstu</groupId>
             <artifactId>kcheck</artifactId>
-            <version>0.0.0.2</version>
+            <version>${kcheck.version}</version>
         </dependency>
 
     </dependencies>
