--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jetbrains.research</groupId>
     <artifactId>kfirst-runner</artifactId>
-    <version>0.1.13</version>
+    <version>0.1.14</version>
 
     <distributionManagement>
         <repository>
@@ -47,6 +47,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.0.13</logback.version>
         <jackson.version>2.9.0</jackson.version>
+        <guava.version>26.0-jre</guava.version>
         <kcheck.version>0.0.0.2</kcheck.version>
     </properties>
 
@@ -117,6 +118,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.jupiter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
